fixed spacing issues

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -4,7 +4,7 @@
   opacity: 0px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   padding: 20px;
 }
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin: 0 52px 0 52px;
 }
 
 .header {
